--- a/landing_page.html
+++ b/landing_page.html
@@ -13,6 +13,10 @@
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
 
+    <!-- JavaScript -->
+    <script type="text/javascript" src="shadowcard.js"></script>
+    
+
 
     <title>RT RW NET</title>
   </head>
